src/contentscript/overlay/root/pages/Notifications/Notifications.module.scss
@import '../../assets/styles/fonts.scss';
@import '../../assets/styles/color.variables.scss';
@import '../../assets/styles/null.scss';

.wrapper {
  display: flex;
  flex-direction: column;
  width: 100%;

  padding: 20px 0px 0px 0px;
  overflow: hidden;
}

.notification {
  display: flex;
  width: 100%;
  height: 72vh;
  flex-direction: column;
  padding: 8px 0px 0px 0px;
  overflow-y: scroll;
  direction: rtl;
  &::-webkit-scrollbar {
    width: 4px;
    cursor: pointer;
  }
  &::-webkit-scrollbar-track {
    background: rgb(244, 244, 244);
    background: rgb(244, 244, 244);
    background: linear-gradient(
      90deg,
      rgba(244, 244, 244, 1) 25%,
      rgba(227, 227, 227, 1) 50%,
      rgba(244, 244, 244, 1) 25%
    );
  }

  &::-webkit-scrollbar-thumb {
    width: 4px;
    height: 2px;
    background: $Primary;
    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.09),
      0px 2px 2px rgba(38, 117, 209, 0.04);
    border-radius: 2px;
  }
}
.notification > * {
  direction: ltr;
}

.notificationClose {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px 0px 0px 0px;
}

.clearAll {
  font-family: 'Roboto';
  font-weight: 400;
  font-size: 14px;
  line-height: 149%;
  color: $Primary;
}

.noNot {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1 1 auto;
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  font-size: 22px;
  line-height: 26px;
  text-align: center;
  color: $StrokeColor;
  z-index: 9999;
}
@media (max-width: 640px) and (min-width: 320px) {
  .wrapper {
    &::-webkit-scrollbar {
      width: 0;
    }
    max-height: 100vh;
    flex: 1 1 auto;
    padding: 0px 0px 0px 0px;
  }
  .notificationClose {
    // display: none;
    padding: 10px 0px 0px 0px;
  }
  .notification {
    flex: 1 1 auto;
    max-height: 70vh;
  }
}

